# aikido-tools-rs

./: Cargo.toml  README.md  aikido-auth.bundled.json  aikido-rest.bundled.json
.claude-plugin/: marketplace.json
crates/aikido/: Cargo.toml
crates/aikido-cli/: Cargo.toml
crates/aikido-cli/src/: main.rs  output.rs
crates/aikido-cli/src/commands/: api.rs  clouds.rs  containers.rs  domains.rs  firewall.rs  issues.rs  mod.rs  reports.rs  repositories.rs  teams.rs  users.rs  workspace.rs
crates/aikido-cli/src/models/: output.rs
crates/aikido-mcp/: Cargo.toml
crates/aikido-mcp/src/: config.rs  error.rs  main.rs  server.rs  state.rs
crates/aikido-mcp/src/tools/: api.rs  clouds.rs  containers.rs  domains.rs  firewall.rs  issues.rs  mod.rs  reports.rs  repositories.rs  teams.rs  users.rs  workspace.rs
crates/aikido/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  openapi.rs
crates/aikido/src/api/: changelog.rs  clouds.rs  containers.rs  domains.rs  firewall.rs  issue_groups.rs  issues.rs  licenses.rs  mod.rs  pentests.rs  reports.rs  repositories.rs  task_tracking.rs  teams.rs  users.rs  virtual_machines.rs  workspace.rs
crates/aikido/tests/: spec_conformance.rs
skills/aikido-security/: SKILL.md
skills/aikido-security/references/: api_reference.md
