[package]
name = "aikido-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for Aikido Security"

[[bin]]
name = "aikido"
path = "src/main.rs"

[dependencies]
aikido = { path = "../aikido", features = ["config"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
toon-rs = "2.1"
