[package]
name = "aikido-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server for Aikido Security API (stdio transport)"

[dependencies]
aikido = { path = "../aikido", features = ["config"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "8a577659f01917289064c0a3c753392b44305ef4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
