[package]
name = "aikido"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Async Rust client for the Aikido Security API with OAuth2 authentication"
keywords = ["aikido", "security", "api", "async", "client"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
thiserror = "2"
base64 = "0.22"
toml = { version = "0.8", optional = true }
directories = { version = "5.0", optional = true }

[features]
default = []
config = ["dep:toml", "dep:directories"]
